--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "author": "Bartosz Lorek",
   "license": "MIT",
   "dependencies": {
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
+  },
+  "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "^0.26.2",
     "express": "^4.14.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.2",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
