--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p --config webpack.config.prod.js",
     "start": "node server.js"
   },
   "repository": {
@@ -24,9 +24,10 @@
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.26.2",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.2",
-    "webpack": "^1.13.2",
+    "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   }
